--- a/app.ipynb
+++ b/app.ipynb
@@ -57,7 +57,7 @@
     "server_url=secretFileContentJson.get(\"server_url\")\n",
     "\n",
     "# 設定Server啟用細節\n",
-    "app = Flask(__name__,static_url_path = \"/images\" , static_folder = \"./images/\")\n",
+    "app = Flask(__name__,static_url_path = \"/素材\" , static_folder = \"./素材/\")\n",
     "\n",
     "# 生成實體物件\n",
     "line_bot_api = LineBotApi(secretFileContentJson.get(\"channel_access_token\"))\n",
