--- a/rich_menu.ipynb
+++ b/rich_menu.ipynb
@@ -12,6 +12,9 @@
     "\n",
     "'''\n",
     "\n",
+    "import json\n",
+    "from linebot import LineBotApi\n",
+    "\n",
     "# 載入安全設定檔\n",
     "secretFileContentJson=json.load(open(\"./line_secret_key\",'r'))\n",
     "line_bot_api = LineBotApi(secretFileContentJson.get(\"channel_access_token\"))\n",
