update video message

--- a/app.ipynb
+++ b/app.ipynb
@@ -42,7 +42,7 @@
     "import json\n",
     "\n",
     "# 載入基礎設定檔\n",
-    "secretFileContentJson=json.load(open(\"./line_secret_key\",'r'))\n",
+    "secretFileContentJson=json.load(open(\"./line_secret_key\",'r',encoding='utf8'))\n",
     "server_url=secretFileContentJson.get(\"server_url\")\n",
     "\n",
     "# 設定Server啟用細節\n",
@@ -92,7 +92,7 @@
     "\n",
     "# 引用會用到的套件\n",
     "from linebot.models import (\n",
-    "    ImagemapSendMessage,TextSendMessage,ImageSendMessage,LocationSendMessage,FlexSendMessage\n",
+    "    ImagemapSendMessage,TextSendMessage,ImageSendMessage,LocationSendMessage,FlexSendMessage,VideoSendMessage\n",
     ")\n",
     "\n",
     "from linebot.models.template import (\n",
@@ -131,7 +131,10 @@
     "        elif message_type == 'location':\n",
     "            returnArray.append(LocationSendMessage.new_from_json_dict(jsonObject))\n",
     "        elif message_type == 'flex':\n",
+    "            returnArray.append(FlexSendMessage.new_from_json_dict(jsonObject))  \n",
+    "        elif message_type == 'video':\n",
     "            returnArray.append(FlexSendMessage.new_from_json_dict(jsonObject))    \n",
+    "\n",
     "\n",
     "    # 回傳\n",
     "    return returnArray"
