--- a/rich_menu.ipynb
+++ b/rich_menu.ipynb
@@ -16,7 +16,7 @@
     "from linebot import LineBotApi\n",
     "\n",
     "# 載入安全設定檔\n",
-    "secretFileContentJson=json.load(open(\"./line_secret_key\",'r'))\n",
+    "secretFileContentJson=json.load(open(\"./line_secret_key\",'r',encoding='utf8'))\n",
     "line_bot_api = LineBotApi(secretFileContentJson.get(\"channel_access_token\"))\n",
     "\n",
     "\n",
