--- a/rich_menu.ipynb
+++ b/rich_menu.ipynb
@@ -32,13 +32,13 @@
     "\n",
     "    \n",
     "    # 創建菜單，取得menuId\n",
-    "    lineRichMenuId = line_bot_api.create_rich_menu(rich_menu=RichMenu.new_from_json_dict(json.load(open(\"素材/\"+rich_menu_name+'/rich_menu.json','r'))))\n",
+    "    lineRichMenuId = line_bot_api.create_rich_menu(rich_menu=RichMenu.new_from_json_dict(json.load(open(\"素材/\"+rich_menu_name+'/rich_menu.json','r',encoding='utf8'))))\n",
     "    print(\"-設定檔上傳結果\")\n",
     "    print(lineRichMenuId)\n",
     "\n",
     "                                           \n",
     "    # id寫入本地端                              \n",
-    "    f = open(\"素材/\"+rich_menu_name+\"/rich_menu_id\", \"w\")\n",
+    "    f = open(\"素材/\"+rich_menu_name+\"/rich_menu_id\", \"w\",encoding='utf8')\n",
     "    f.write(lineRichMenuId)\n",
     "    f.close()                                       \n",
     " \n",
@@ -71,7 +71,7 @@
     "\n",
     "import json\n",
     "\n",
-    "secretFileContentJson=json.load(open(\"./line_secret_key\",'r'))\n",
+    "secretFileContentJson=json.load(open(\"./line_secret_key\",'r',encoding='utf8'))\n",
     "line_bot_api = LineBotApi(secretFileContentJson.get(\"channel_access_token\"))\n",
     "\n",
     "line_bot_api.get_rich_menu_list()\n"
@@ -94,7 +94,7 @@
     ")\n",
     "\n",
     "import json\n",
-    "secretFileContentJson=json.load(open(\"./line_secret_key\",'r'))\n",
+    "secretFileContentJson=json.load(open(\"./line_secret_key\",'r',encoding='utf8'))\n",
     "line_bot_api = LineBotApi(secretFileContentJson.get(\"channel_access_token\"))\n",
     "\n",
     "# 設定要移除的rich_menu\n",
@@ -133,7 +133,7 @@
     "\n",
     "# rich_menu_id_array = [\"rich_menu_0\"]\n",
     "\n",
-    "secretFileContentJson=json.load(open(\"./line_secret_key\",'r'))\n",
+    "secretFileContentJson=json.load(open(\"./line_secret_key\",'r',encoding='utf8'))\n",
     "line_bot_api = LineBotApi(secretFileContentJson.get(\"channel_access_token\"))\n",
     "\n",
     "self_user_id='Ud29c5cf085e845db7c6457677116df4d'\n",
@@ -160,7 +160,7 @@
     "\n",
     "# rich_menu_id_array = [\"rich_menu_0\"]\n",
     "\n",
-    "secretFileContentJson=json.load(open(\"./line_secret_key\",'r'))\n",
+    "secretFileContentJson=json.load(open(\"./line_secret_key\",'r',encoding='utf8'))\n",
     "line_bot_api = LineBotApi(secretFileContentJson.get(\"channel_access_token\"))\n",
     "\n",
     "self_user_id='Ud29c5cf085e845db7c6457677116df4d'\n",
