--- a/app.ipynb
+++ b/app.ipynb
@@ -133,7 +133,7 @@
     "        elif message_type == 'flex':\n",
     "            returnArray.append(FlexSendMessage.new_from_json_dict(jsonObject))  \n",
     "        elif message_type == 'video':\n",
-    "            returnArray.append(FlexSendMessage.new_from_json_dict(jsonObject))    \n",
+    "            returnArray.append(VideoSendMessage.new_from_json_dict(jsonObject))    \n",
     "\n",
     "\n",
     "    # 回傳\n",
